--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>お知らせ</title>
+    <title>お知ら</title>
     <style>
       body {
         font-family: "Yu Gothic", "Hiragino Kaku Gothic ProN", sans-serif;
