--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
         <li>
           <a href="https://doshida-pocketcode.netlify.app/programming/"
             ><h3 class="st">
-              <span class="line">プログラミング<br />　 　教室</span>
+              <span class="line">プログラミング教室</span>
             </h3>
             <div class="link_img">
               <img src="images/programming.jpg" />
