--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 >
               </li>
               <li>
-                <a href="https://doshida-pocketcode.netlify.app/itsupport/"
+                <a href="itsupport/"
                   ><span class="link_line">ITサポート</span></a
                 >
               </li>
@@ -370,7 +370,7 @@
 
       <ul class="wide_center">
         <li>
-          <a href="https://doshida-pocketcode.netlify.app/about/"
+          <a href="about/"
             ><h3 class="st"><span class="line">自己紹介</span></h3>
             <div class="link_img">
               <img src="images/PocketCodeBig.png" />
@@ -381,7 +381,7 @@
           >
         </li>
         <li>
-          <a href="https://doshida-pocketcode.netlify.app/programming/"
+          <a href="programming/"
             ><h3 class="st">
               <span class="line">プログラミング教室</span>
             </h3>
@@ -394,7 +394,7 @@
           >
         </li>
         <li>
-          <a href="https://doshida-pocketcode.netlify.app/itsupport/"
+          <a href="itsupport/"
             ><h3 class="st"><span class="line">ITサポート</span></h3>
             <div class="link_img">
               <img src="images/itsupport.jpg" />
