--- a/about.html
+++ b/about.html
@@ -4,43 +4,48 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>自己紹介</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap"
+      rel="stylesheet"
+    />
     <style>
       body {
-        font-family: "Hiragino Kaku Gothic ProN", "Yu Gothic", sans-serif;
-        background-color: #fffaf4;
+        font-family: "Kosugi Maru", sans-serif;
+        background-color: #fefcf6;
         margin: 0;
         padding: 0;
-        color: #444;
+        color: #333;
       }
 
       .container {
-        max-width: 800px;
+        max-width: 840px;
         margin: 50px auto;
         padding: 30px 20px;
         background: #ffffff;
-        border-radius: 15px;
-        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+        border-radius: 25px;
+        box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
+        border: 5px solid #f4a300;
       }
 
       h2 {
         text-align: center;
-        font-size: 26px;
-        color: #f25a3a;
+        font-size: 32px;
+        color: #ef6c00;
         margin-bottom: 30px;
       }
 
       .section {
         margin-bottom: 25px;
         padding: 20px;
-        border-left: 5px solid #f2a13a;
-        background: #fff4e6;
-        border-radius: 10px;
+        background: #e6f6f8;
+        border-left: 10px solid #00acc1;
+        border-radius: 20px;
       }
 
       .section h3 {
         margin-top: 0;
-        font-size: 18px;
-        color: #d75b00;
+        font-size: 20px;
+        color: #007c91;
         margin-bottom: 10px;
       }
 
@@ -50,34 +55,33 @@
       }
 
       .balloon {
-        position: relative;
-        background: #fce8e6;
-        border-radius: 15px;
-        padding: 20px;
         margin-top: 40px;
+        padding: 20px;
+        background: #fff3e0;
+        border-radius: 20px;
+        border-left: 10px solid #ffb300;
+        position: relative;
       }
 
       .balloon::after {
         content: "";
         position: absolute;
         bottom: -15px;
-        left: 30px;
-        width: 0;
-        height: 0;
+        left: 40px;
         border: 15px solid transparent;
-        border-top-color: #fce8e6;
+        border-top-color: #fff3e0;
       }
 
       .balloon p {
         margin: 0;
+        font-size: 15px;
         color: #444;
       }
 
       @media (max-width: 600px) {
         h2 {
-          font-size: 22px;
+          font-size: 26px;
         }
-
         .section h3 {
           font-size: 16px;
         }
