--- a/information.html
+++ b/information.html
@@ -4,6 +4,36 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>お知らせ</title>
+
+    <link rel="stylesheet" href="../css/style.css" />
+
+    <script
+      type="text/javascript"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"
+    ></script>
+
+    <script type="text/javascript" src="../js/home.js"></script>
+    <script type="text/javascript" src="../js/common.js"></script>
+
+    <script type="text/javascript" src="js/jquery.matchHeight.js"></script>
+
+    <!--Webfont-->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Zen+Kaku+Gothic+New:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+
+    <meta name="robots" content="max-image-preview:large" />
+
+    <!-- Webフォント -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap"
+      rel="stylesheet"
+    />
+
     <style>
       body {
         font-family: "Yu Gothic", "Hiragino Kaku Gothic ProN", sans-serif;
@@ -83,6 +113,42 @@
     </style>
   </head>
   <body>
+    <header>
+      <div class="toggle"><span></span><span></span><span></span></div>
+      <div id="menu">
+        <div class="navi_area">
+          <div class="navi">
+            <ul class="main">
+              <li>
+                <a href="https://doshida-pocketcode.netlify.app/"
+                  ><span class="link_line">ホーム</span></a
+                >
+              </li>
+              <li>
+                <a href="https://doshida-pocketcode.netlify.app/about/"
+                  ><span class="link_line">自己紹介</span></a
+                >
+              </li>
+              <li>
+                <a href="https://doshida-pocketcode.netlify.app/programming/"
+                  ><span class="link_line">プログラミング教室</span></a
+                >
+              </li>
+              <li>
+                <a href="https://doshida-pocketcode.netlify.app/itsupport/"
+                  ><span class="link_line">ITサポート</span></a
+                >
+              </li>
+              <li>
+                <a href="https://doshida-pocketcode.netlify.app/contact/"
+                  ><span class="link_line">お問い合わせ</span></a
+                >
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
     <div class="news-section">
       <h2>お知らせ</h2>
 
