--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,10 @@
       name="description"
       content="Pocket +Codeへのお問い合わせページです。なんでもお気軽にご相談ください。"
     />
-    <meta property="og:url" content="https://doshida-pocketcode.netlify.app/contact/" />
+    <meta
+      property="og:url"
+      content="https://doshida-pocketcode.netlify.app/contact/"
+    />
 
     <meta property="og:type" content="website" />
     <meta property="og:image" content="images/PocketCodeBig.png" />
@@ -44,11 +47,13 @@
     <meta name="robots" content="max-image-preview:large" />
 
     <!-- Webフォント -->
-    <link href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kosugi+Maru&display=swap"
+      rel="stylesheet"
+    />
 
     <style>
       body {
-
         background-color: #fdfaf7;
         margin: 0;
         padding: 0;
@@ -78,45 +83,45 @@
         box-shadow: 0 6px 18px rgba(0, 0, 0, 0.08);
 
         max-width: 700px;
-  margin-left: auto;
-  margin-right: auto;
+        margin-left: auto;
+        margin-right: auto;
       }
 
       .contact-button {
-  display: inline-block;
-  padding: 18px 30px;
-  border-radius: 50px;
-  background-color: #4db6ac;
-  color: #fff;
-  font-size: 16px;
-  text-decoration: none;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
-  transition: background-color 0.3s, transform 0.2s;
-}
+        display: inline-block;
+        padding: 18px 30px;
+        border-radius: 50px;
+        background-color: #4db6ac;
+        color: #fff;
+        font-size: 16px;
+        text-decoration: none;
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        transition: background-color 0.3s, transform 0.2s;
+      }
 
-.contact-button:hover {
-  background-color: #00796b;
-  transform: scale(1.05);
-}
+      .contact-button:hover {
+        background-color: #00796b;
+        transform: scale(1.05);
+      }
 
       @media (max-width: 600px) {
         h2 {
-    font-size: 22px;
-  }
+          font-size: 22px;
+        }
 
-  .message {
-    font-size: 15px;
-    padding: 20px;
-  }
+        .message {
+          font-size: 15px;
+          padding: 20px;
+        }
 
-  .contact-button {
-    width: auto;
-    height: auto;
-    padding: 15px 25px;
-    border-radius: 50px;
-    font-size: 14px;
-    line-height: 1.2;
-  }
+        .contact-button {
+          width: auto;
+          height: auto;
+          padding: 15px 25px;
+          border-radius: 50px;
+          font-size: 14px;
+          line-height: 1.2;
+        }
       }
     </style>
   </head>
@@ -129,11 +134,31 @@
         <div class="navi_area">
           <div class="navi">
             <ul class="main">
-              <li><a href="https://doshida-pocketcode.netlify.app/"><span class="link_line">ホーム</span></a></li>
-              <li><a href="https://doshida-pocketcode.netlify.app/about/"><span class="link_line">自己紹介</span></a></li>
-              <li><a href="https://doshida-pocketcode.netlify.app/programming/"><span class="link_line">プログラミング教室</span></a></li>
-              <li><a href="https://doshida-pocketcode.netlify.app/itsupport/"><span class="link_line">ITサポート</span></a></li>
-              <li><a href="https://doshida-pocketcode.netlify.app/contact/"><span class="link_line">お問い合わせ</span></a></li>
+              <li>
+                <a href="https://doshida-pocketcode.netlify.app/"
+                  ><span class="link_line">ホーム</span></a
+                >
+              </li>
+              <li>
+                <a href="https://doshida-pocketcode.netlify.app/about/"
+                  ><span class="link_line">自己紹介</span></a
+                >
+              </li>
+              <li>
+                <a href="https://doshida-pocketcode.netlify.app/programming/"
+                  ><span class="link_line">プログラミング教室</span></a
+                >
+              </li>
+              <li>
+                <a href="https://doshida-pocketcode.netlify.app/itsupport/"
+                  ><span class="link_line">ITサポート</span></a
+                >
+              </li>
+              <li>
+                <a href="https://doshida-pocketcode.netlify.app/contact/"
+                  ><span class="link_line">お問い合わせ</span></a
+                >
+              </li>
             </ul>
           </div>
         </div>
@@ -149,7 +174,11 @@
         教室についてのご質問など、なんでもお気軽にご相談ください 😊
       </div>
 
-      <a class="contact-button" href="https://docs.google.com/forms/d/e/あなたのフォームID/viewform" target="_blank">
+      <a
+        class="contact-button"
+        href="https://docs.google.com/forms/d/e/1FAIpQLSf3agZtv2UCklvHd-gIZEWRae0qsDMWLhaywbqJTOiQVUa-TA/viewform?usp=dialog"
+        target="_blank"
+      >
         お問い合わせ
       </a>
     </div>
