--- a/index.html
+++ b/index.html
@@ -100,6 +100,28 @@
                 >
               </li>
 
+ <!--★★★★★　遷移確認用　★★★★★-->     <!--        
+              <li>
+                <a href="about.html"
+                  ><span class="link_line">自己紹介test</span></a
+                >
+              </li>
+              <li>
+                <a href="programming.html"
+                  ><span class="link_line">プログラミング教室test</span></a
+                >
+              </li>
+              <li>
+                <a href="itsupport.html"
+                  ><span class="link_line">ITサポートtest</span></a
+                >
+              </li>
+              <li>
+                <a href="contact.html"
+                  ><span class="link_line">お問い合わせtest</span></a
+                >
+              </li>
+ <!--★★★★★　遷移確認用　★★★★★-->             
 
 
           </div>
