--- a/index.html
+++ b/index.html
@@ -190,6 +190,7 @@
     </div>
     <!--key-->
 
+ <!--★★★★★　一旦隠す　★★★★★-->     <!--      
     <div class="news_list wide_center">
       <ul>
         <li>
@@ -217,6 +218,7 @@
       >
     </div>
     <!--news_list-->
+ <!--★★★★★　一旦隠す　★★★★★-->             
 
     <div class="portal">
       <div class="lead box_kakko wide_center">
@@ -307,3 +309,4 @@
     </script>
   </body>
 </html>
+
