--- a/programming.html
+++ b/programming.html
@@ -220,18 +220,20 @@
       <!--menu-->
     </header>
 
+ <!--★★★★★　遷移確認用　★★★★★-->     <!--        
     <div class="notice-box">
       ⚠️まだ工事中⚠️<br />
       生徒募集はしてません<br />
       ９月頃に開校できるかなぁ、、
     </div>
+ <!--★★★★★　遷移確認用　★★★★★-->             
 
     <div class="container">
       <h2>プログラミング教室</h2>
 
       <div class="section">
         <h3>🎓 対象学年</h3>
-        <p>小学1〜6年生</p>
+        <p>小学3〜6年生</p>
       </div>
 
       <div class="section">
@@ -243,7 +245,9 @@
 
       <div class="section">
         <h3>🕒 開催日時＜仮＞</h3>
-        <p>毎週水曜日　16:00〜17:00（1回60分）</p>
+        <p>毎週月曜日　16:00〜17:00（1回60分）</p>
+        <p>毎週火曜日　16:00〜17:00（1回60分）</p>
+        <p>毎週水曜日　15:30〜16:30（1回60分）</p>
       </div>
 
       <div class="section">
