--- a/programming.html
+++ b/programming.html
@@ -244,10 +244,10 @@
       </div>
 
       <div class="section">
-        <h3>🕒 開催日時＜仮＞</h3>
+        <h3>🕒 開催日時</h3>
         <p>毎週月曜日　16:00〜17:00（1回60分）</p>
         <p>毎週火曜日　16:00〜17:00（1回60分）</p>
-        <p>毎週水曜日　15:30〜16:30（1回60分）</p>
+        <p>毎週水曜日　15:00〜16:00（1回60分）</p>
       </div>
 
       <div class="section">
